Aggiunto Readme.md

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,11 @@
 <%- include("partials/header.ejs")%>
 <div class="profile-card">
-	<img class="profile-pic" src="/imgs/avatar-1577909_1280.png" alt="Shadow the Edgehog">
-	<h1 class="title name">Bard Sapio</h1>
-	<p class="body">Hello, I'm mr Frog, this is my blog</p>
+	<!--Change this src for profile picture-->
+	<img class="profile-pic" src="/imgs/avatar-1577909_1280.png" alt="Profile Picture">
+	<!--Title-->
+	<h1 class="title name">Put your title here</h1>
+	<!--Description-->
+	<p class="body">Look at '/views/index.ejs' to change this propic, title and desc</p>
 </div>
 <hr class="hr">
 <div class="entries">
