--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs")%>
 <div class="profile-card">
-	<!--Change this src for profile picture-->
+	<!--Change src for profile picture, you must put the image in /public/imgs-->
 	<img class="profile-pic" src="/imgs/avatar-1577909_1280.png" alt="Profile Picture">
 	<!--Title-->
 	<h1 class="title name">Put your title here</h1>
